@@ -1,3 +1,9 @@
+2008-12-31  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/cpufreq-applet.c: (cpufreq_applet_init): Remove
+	change_background callback since it's already implemented by
+	libpanel-applet. 
+	
 ==================== 2.25.2 ======================
 
 2008-12-15  Carlos Garcia Campos  <carlosgc@gnome.org>
